5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1594_1800.log
== TEST (2019-03-26 17:00:15) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
x = (a**2+b**2+c**2) / (a+b+C)
print(x)
print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = (a**2+b**2+c**2) / (a+b+C)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:00:52) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
x = (a**2+b**2+c**2) / (a+b+c)
print(x)
print(round(x, 7))
-- OUTPUT:
25.666666666666668
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:02:02) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
x = (a**2+b**2+c**2) / (a+b+c)

print(round(x, 7))
-- EXECUTION TIME:
0.185606
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
